[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "medical-triage-env"
version = "6.0.0"
description = "An OpenEnv environment for AI-powered emergency medical triage using the Emergency Severity Index (ESI)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "openenv-core==0.1.0",
    "requests>=2.31.0",
    "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "tests*"]
