[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-triage-env"
version = "1.0.0"
description = "An OpenEnv environment for AI-powered emergency medical triage using the Emergency Severity Index (ESI)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "openenv-core==0.1.0",
    "requests>=2.31.0",
    "openai>=1.40.0",
]

[project.optional-dependencies]
rl = [
    "torch>=2.2.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "rl*", "tests*"]
